--- a/browser/index.html
+++ b/browser/index.html
@@ -3,10 +3,42 @@
 
 <head>
     <title>Mirror Mirror</title>
-    <link href="/stylesheets/style.css" rel="stylesheet"/>
+    <!-- <link href="/stylesheets/style.css" rel="stylesheet"/> -->
+    <script src="/three/three.js"></script>
+    <script src="/three/examples/js/controls/OrbitControls.js"></script>
+            <script type="x-shader/x-vertex" id="vertexshader">
+
+            attribute float size;
+            attribute vec3 customColor;
+            varying vec3 vColor;
+
+            void main() {
+
+                vColor = customColor;
+                vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+                gl_PointSize = size * ( 300.0 / -mvPosition.z );
+                gl_Position = projectionMatrix * mvPosition;
+            }
+
+        </script>
+
+        <script type="x-shader/x-fragment" id="fragmentshader">
+
+            uniform vec3 color;
+            uniform sampler2D texture;
+
+            varying vec3 vColor;
+
+            void main() {
+                gl_FragColor = vec4( color * vColor, 1.0 );
+                gl_FragColor = gl_FragColor * texture2D( texture, gl_PointCoord );
+            }
+
+        </script>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.2.1/annyang.min.js"></script>
-    <script src="/angular/angular.js" defer></script>
-    <script src="/angular-ui-router/release/angular-ui-router.min.js" defer></script>
+    <script src="/angular/angular.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/js/module.js" defer></script>
     <script src="/js/controllers/app.controller.js" defer></script>
     <script src="/js/controllers/active.controller.js" defer></script>
