--- a/browser/index.html
+++ b/browser/index.html
@@ -12,8 +12,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
+    <script src="headtrackr.js"></script>
     <!-- active template stuff -->
-
     <script src="/javascripts/vendor/jquery-1.11.3.min.js"></script>
     <script src="/javascripts/vendor/jquery.simpleWeather.min.js"></script>
     <script src="/javascripts/vendor/modernizr-2.8.3.min.js"></script>
@@ -44,9 +44,16 @@
 </head>
 
 <body ng-app="app">
+    <div id="demo-container">
+        <video id="inputVideo" width="300" height="200" camera="true" autoplay loop></video>
+        <canvas id="inputCanvas" width="300" height="200"></canvas>
+    </div>
+
+
     <div ng-controller="appCtrl">
         <ui-view></ui-view>
     </div>
+
 
 </body>
 
