Finished date and weather

--- a/browser/index.html
+++ b/browser/index.html
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <script src="headtrackr.js"></script>
+    <!--<script src="headtrackr.js"></script>-->
     <!-- active template stuff -->
     <script src="/javascripts/vendor/jquery-1.11.3.min.js"></script>
     <script src="/javascripts/vendor/jquery.simpleWeather.min.js"></script>
@@ -21,6 +21,7 @@
 
     <!--TODO: check to see if this depends on anything else-->
     <script src="/javascripts/skycons.js"></script>
+    <script src="/javascripts/main.js"></script>
     <script src="/javascripts/plugins.js"></script>
     <script type="text/javascript" src="/javascripts/clock.js"></script>
     <script type="text/javascript" src="/javascripts/weather.js"></script>
