--- a/browser/js/active.template.html
+++ b/browser/js/active.template.html
@@ -10,21 +10,6 @@
     </div>
 </section>
 
-<script type="text/javascript">
-    var gitHash = {{ trim(`git rev-parse HEAD`) }};
-    (function checkVersion()
-    {
-        $.getJSON('/version', {}, function(json, textStatus) {
-            if (json) {
-                if (json.gitHash != gitHash) {
-                    window.location.reload();
-                    window.location.href=window.location.href;
-                }
-            }
-        });
-        setTimeout(function() {
-            checkVersion();
-        }, 3000);
-    })();
-</script>
-
+<p id="greeting">
+    wdup dawg Q(-.-Q)
+</p>
