--- a/browser/js/foggy.template.html
+++ b/browser/js/foggy.template.html
@@ -1,2 +1,2 @@
 <div id="container"></div>
-<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> webgl - buffergeometry custom attributes - particles</div>
+<!-- <div id="info"><a href="http://threejs.org" target="_blank">three.js</a> webgl - buffergeometry custom attributes - particles</div> -->
