--- a/browser/js/active.template.html
+++ b/browser/js/active.template.html
@@ -2,15 +2,19 @@
     <div id="date">
 
     </div>
+
+    <div id="transit">
+        <span> {{ transit.description }} </span> <br>
+        <h6> Duration: {{ transit.duration }} </h6>
+        <h6> Leaves at: {{ transit.departureTime }} </h6>
+        <h6> Arrives at: {{ transit.arrivalTime }} </h6>
+    </div>
+
     <div id="weather">
 
     </div>
-    <div id="pianobar">
 
-    </div>
 </section>
 
-<p id="greeting">
-    wdup dawg Q(-.-Q)
-</p>
 
+beyonce
